Removed Gravity Points

--- a/index_working_version.html
+++ b/index_working_version.html
@@ -13,8 +13,8 @@
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   <canvas id="c"></canvas>
-  <!--<script src='gravity_points/js/kzymdn.js'></script>
-  <script  src="gravity_points/js/index.js"></script>-->
+  <script src='gravity_points/js/kzymdn.js'></script>
+  <script  src="gravity_points/js/index.js"></script>
 
 <!--Code for the Navigation bar-->
 <nav class="navbar navbar-inverse navbar-fixed-top">
