Atempt 2 at removing gravity points

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style2.css">
 </head>
-
+<!--
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   <canvas id="c"></canvas>
-  <!--<script src='gravity_points/js/kzymdn.js'></script>
+  <script src='gravity_points/js/kzymdn.js'></script>
   <script  src="gravity_points/js/index.js"></script>-->
 
 <!--Code for the Navigation bar-->
