--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style2.css">
 </head>
+
+<!--Gravity Points Code-->
 <!--
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   <canvas id="c"></canvas>
@@ -49,13 +51,15 @@
   <h1 class = "intro">Krishna Chatpar</h1>
   <img class="img-responsive" src="me.jpg" alt="Krishna" width="200" height="200" id = "headshot">
   <p id = "intro">
-    <BR>
-    My name is Krishna Chatpar, I was born in India and came to the U.S. when I was young.<BR>
-    I grew up in Dix Hills, New York and graduated from Half Hollow Hills High School West.<BR>
-    I am an undergraduate at the Univeristy at Buffalo. My major is Computer Science and Biology.<BR>
-      <BR>
-    A fun fact: My first language was actually French.<BR>
-    I speak English and French fluently and a little bit of Spanish and quite a few computer programming languages.<BR>
+  
+    <br>My name is Krishna Chatpar, I was born in India and came to the U.S. when I was young.
+    <BR>I grew up in Dix Hills, New York and graduated from Half Hollow Hills High School West.
+    <BR>I recently graduated from the University at Buffalo with a B.A. in Computer Science and a concentration in Biology.
+    <BR>My favorite programming languages to code in are: Python, Java, and R. 
+    <BR>Some of my favorite frameworks are Spark and Hadoop. 
+    <BR>And I'm always looking for new languages and packages to learn.
+    <BR>A fun fact: My first language was actually French.
+    <BR>I speak English and French fluently and I'm currently learning Spanish.
   </p>
 </div>
 </div>
@@ -78,13 +82,13 @@
 
 <div id="section3" class="container-fluid">
   <h1 class = "intro">Publications</h1>
-    <BR>
-    <BR>
-  <p class = "intro">My first publication is from my genetics research at Yale. <BR>You can find it here by clicking on the picture:<p>
-  <BR><BR>
+    <BR><BR>
+    <p id = "TPJ">Increased efficiency of targeted mutagenesis by CRISPR/Cas9 in plants using heat stress. (2018) LeBlanc C, Zhang F, Mendez J, Lozano Y, Chatpar K, Irish VF, Jacob Y.  <em><strong>The Plant Journal</strong> 93(2)</em>: 377-386. <a href="https://www.ncbi.nlm.nih.gov/pubmed/29161464">[Pubmed]</a></p>
+  <!-- 
   <a href = "http://onlinelibrary.wiley.com/doi/10.1111/tpj.13782/full">
   <img alt="logos" src="plantjournal.jpeg" width="200" height="200" class = "intro" id = "tpg">
 </a>
+-->
 </div>
 
 <div id="section4" class="container-fluid">
