--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <ul class="nav navbar-nav">
           <li><a href="#section1">Meet Krishna</a></li>
           <li><a href="#section2">Research</a></li>
-          <li><a href="#section3">Publications</a></li>
+          <!--<li><a href="#section3">Publications</a></li>-->
           <li><a href="#section4">Images Taken</a></li>
-          <li><a href="#section5">Social Media</a></li>
+          <li><a href="#section5">Contact Me</a></li>
         </ul>
       </div>
     </div>
@@ -52,14 +52,17 @@
   <img class="img-responsive" src="me.jpg" alt="Krishna" width="200" height="200" id = "headshot">
   <p id = "intro">
   
-    <br>My name is Krishna Chatpar, I was born in India and came to the U.S. when I was young.
-    <BR>I grew up in Dix Hills, New York and graduated from Half Hollow Hills High School West.
-    <BR>I recently graduated from the University at Buffalo with a B.A. in Computer Science and a concentration in Biology.
+    <BR>My name is Krishna Chatpar, I was born in India and came to the U.S. when I was young.
+    <BR>I recently graduated from the University at Buffalo with a B.A. in Computer Science with a concentration in Biology.
+    <BR>
     <BR>My favorite programming languages to code in are: Python, Java, and R. 
     <BR>Some of my favorite frameworks are Spark and Hadoop. 
     <BR>And I'm always looking for new languages and packages to learn.
-    <BR>A fun fact: My first language was actually French.
-    <BR>I speak English and French fluently and I'm currently learning Spanish.
+    <BR>I'm currently learning about machine learning using Stanford's Machine Learning Course.
+    <BR>You can see some of my past projects on my <a href ="https://github.com/kchatpar">Github</a>
+    <BR>
+    <BR>A fun fact: I'm trilangual not including programming languages! I am fluent in English, French, and Spanish 
+
   </p>
 </div>
 </div>
@@ -70,10 +73,10 @@
   <p class = "intro">
     <BR>
       Lab's I've worked in:<BR>
-      Dr. Robert Martienssen's Labratory at Cold Spring Harbor Laboratories - June 2012 - August 2012<BR>
-      Dr. Richard Axel's at Columbia University and Dr. Adam Kepecs at the Cold Spring Harbor Laboratory - June 2015 - January 2017.<BR>
-      Dr. Sarah Zhang's lab at the University at Buffalo - October 2015 - May 2017.<BR>
-      Dr. Yannick Jacob's Laboratory at Yale University - May 2017 - July 2016.<BR>
+      Dr. Robert Martienssen's Lab at Cold Spring Harbor Laboratories - June 2012 - August 2012<BR>
+      Dr. Richard Axel's Lab at Columbia University and Dr. Adam Kepecs's Lab at the Cold Spring Harbor Laboratory - June 2015 - January 2017.<BR>
+      Dr. Sarah Zhang's Lab at the University at Buffalo - October 2015 - May 2017.<BR>
+      Dr. Yannick Jacob's Lab at Yale University - May 2017 - July 2016.<BR>
       Dr. Dan Landau's Lab at New York Genome Center and WEIL Cornell Medical Center.<BR>
   </p>
   <BR>
@@ -82,9 +85,13 @@
 
 <div id="section3" class="container-fluid">
   <h1 class = "intro">Publications</h1>
-    <BR><BR>
-    <p id = "TPJ">Increased efficiency of targeted mutagenesis by CRISPR/Cas9 in plants using heat stress. (2018) LeBlanc C, Zhang F, Mendez J, Lozano Y, Chatpar K, Irish VF, Jacob Y.  <em><strong>The Plant Journal</strong> 93(2)</em>: 377-386. <a href="https://www.ncbi.nlm.nih.gov/pubmed/29161464">[Pubmed]</a></p>
-  <!-- 
+    <p id = "TPJ">Increased efficiency of targeted mutagenesis by CRISPR/Cas9 in plants using heat stress. LeBlanc C, Zhang F, Mendez J, Lozano Y, <em><strong>Chatpar K</strong></em>, Irish VF, Jacob Y.  <em><strong>The Plant Journal</strong></em>-2018 <a href="https://www.ncbi.nlm.nih.gov/pubmed/29161464">[Pubmed]</a></p>
+    <p id = "ER">Reduction of Endoplasmic Reticulum Stress Improves Angiogenic Progenitor Cell function in a Mouse Model of Type 1 Diabetes. Bhatta M, <em><strong>Chatpar K</strong></em>, Hu Z, Wang JJ, Zhang SX. <em><strong>Cell Death and Disease</strong></em>-2018 <a href="https://www.ncbi.nlm.nih.gov/pubmed/29700294">[Pubmed]</a></p>
+    <h1 class = "intro">Posters</h1>
+    <p id = "Poster">An artificial three dimensional human retinal capillary model for in vitro study of retinal vascular diseases. <em><strong>Chatpar K</strong></em>, Bhatta M, Wang JJ, Zhang SX.  <em><strong>Celebration of Student Academic Excellence, University at Buffalo</strong></em>-2016 <a href="https://curca.buffalo.edu/students/pdfs/2016_posters/Chatpar.pdf">[Download from UB]</a></p>
+    <h1 class = "intro">Awards</h1>
+    <p id = "Award">Won the Best Paper Award from <em><strong>The Plant Journal</strong></em> Silver Prize for the Technical Advance Category for: "Increased efficiency of targeted mutagenesis by CRISPR/Cas9 in plants using heat stress"-2018 <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/tpj.13870">[The Plant Journal]</a></p>
+    <!-- 
   <a href = "http://onlinelibrary.wiley.com/doi/10.1111/tpj.13782/full">
   <img alt="logos" src="plantjournal.jpeg" width="200" height="200" class = "intro" id = "tpg">
 </a>
@@ -135,11 +142,14 @@
   <h1 class = "intro"> Let's stay in touch: </h1>
   <div class = "center" id = "symbols">
 
-  <a href="https://twitter.com/krishdaman" class="fa fa-twitter"></a>
-  <a href="https://www.linkedin.com/in/krishna-chatpar" class="fa fa-linkedin"></a>
-  <a href="https://www.instagram.com/kchatpar/" class="fa fa-instagram"></a>
-  <p class = "intro">Made by Krishna Chatpar.</p>
+  <!--<a href="https://twitter.com/krishdaman" class="fa fa-twitter"></a>-->
+  <!--<a href="https://www.linkedin.com/in/krishna-chatpar" class="fa fa-linkedin"></a>-->
+  <!--<a href="https://www.instagram.com/kchatpar/" class="fa fa-instagram"></a>-->
+  <p><a href="mailto:kchatpar@yahoo.com?Subject=Website%20mail" target="_top">Email Me!</a></p>
+  <a href="https://www.linkedin.com/in/krishna-chatpar">LinkedIn</a>
   <BR>
+  <p class = "intro">Made by Krishna Chatpar.</p>
+ 
   </div>
 </div>
 </body>
