Added TV appearences

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
     <p id = "Poster">An artificial three dimensional human retinal capillary model for in vitro study of retinal vascular diseases. <em><strong>Chatpar K</strong></em>, Bhatta M, Wang JJ, Zhang SX.  <em><strong>Celebration of Student Academic Excellence, University at Buffalo</strong></em>-2016 <a href="https://curca.buffalo.edu/students/pdfs/2016_posters/Chatpar.pdf">[Download from UB]</a></p>
     <h1 class = "intro">Awards</h1>
     <p id = "Award">Won the Best Paper Award from <em><strong>The Plant Journal</strong></em> Silver Prize for the Technical Advance Category for: "Increased efficiency of targeted mutagenesis by CRISPR/Cas9 in plants using heat stress"-2018 <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/tpj.13870">[The Plant Journal]</a></p>
+    <h1 class = "intro">TV Appearances</h1>
+    <p id = "Award">Featured in Food Paradise Season 5 Episode 7 "Taste of The Town" on <em><strong>Travel Channel</strong></em> from minutes 06:18-12:27 <a href="https://www.amazon.com/gp/video/detail/B01N7U8XDH/ref=atv_yvl_list_pr_1">Amazon Video</a></p>
     <!-- 
   <a href = "http://onlinelibrary.wiley.com/doi/10.1111/tpj.13782/full">
   <img alt="logos" src="plantjournal.jpeg" width="200" height="200" class = "intro" id = "tpg">
