--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
 <div id="section3" class="container-fluid">
   <h1 class = "intro">Publications</h1>
   
-    <p id = "TPJ">Increased efficiency of targeted mutagenesis by CRISPR/Cas9 in plants using heat stress. LeBlanc C, Zhang F, Mendez J, Lozano Y, <em><strong>Chatpar K</strong></em>, Irish VF, Jacob Y.  <em><strong>The Plant Journal</strong></em>-2018 <a href="https://www.ncbi.nlm.nih.gov/pubmed/29161464">[Pubmed]</a>
-    <script type="text/javascript" src="https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js"></script><div class="altmetric-embed" data-badge-type="donut" data-altmetric-id="29255433" />
-    </p>
+    <p id = "TPJ">Increased efficiency of targeted mutagenesis by CRISPR/Cas9 in plants using heat stress. LeBlanc C, Zhang F, Mendez J, Lozano Y, <em><strong>Chatpar K</strong></em>, Irish VF, Jacob Y.  <em><strong>The Plant Journal</strong></em>-2018 <a href="https://www.ncbi.nlm.nih.gov/pubmed/29161464">[Pubmed]</a></p>
     <p id = "ER">Reduction of Endoplasmic Reticulum Stress Improves Angiogenic Progenitor Cell function in a Mouse Model of Type 1 Diabetes. Bhatta M, <em><strong>Chatpar K</strong></em>, Hu Z, Wang JJ, Zhang SX. <em><strong>Cell Death and Disease</strong></em>-2018 <a href="https://www.ncbi.nlm.nih.gov/pubmed/29700294">[Pubmed]</a></p>
     <h1 class = "intro">Posters</h1>
     <p id = "Poster">An artificial three dimensional human retinal capillary model for in vitro study of retinal vascular diseases. <em><strong>Chatpar K</strong></em>, Bhatta M, Wang JJ, Zhang SX.  <em><strong>Celebration of Student Academic Excellence, University at Buffalo</strong></em>-2016 <a href="https://curca.buffalo.edu/students/pdfs/2016_posters/Chatpar.pdf">[Download from UB]</a></p>
