--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <BR>Some of my favorite frameworks are Spark and Hadoop. 
     <BR>And I'm always looking for new languages and packages to learn.
     <BR>I'm currently learning about machine learning using Stanford's Machine Learning Course.
-    <BR>You can see some of my past projects on my <a href ="https://github.com/kchatpar">Github</a>
+    <BR>You can see some of my past projects on my <a href ="https://github.com/kchatpar"  target="_blank" >Github</a>
     <BR>
     <BR>A fun fact: I'm trilangual not including programming languages! I am fluent in English, French, and Spanish 
 
@@ -98,17 +98,17 @@
   <script type="text/javascript" src="https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js"></script>
   <div class="altmetric-embed" data-badge-type="donut" data-altmetric-id="29255433"></div>
   <p>  </p>
-    <p id = "TPJ">Increased efficiency of targeted mutagenesis by CRISPR/Cas9 in plants using heat stress. LeBlanc C, Zhang F, Mendez J, Lozano Y, <em><strong>Chatpar K</strong></em>, Irish VF, Jacob Y.  <em><strong>The Plant Journal</strong></em>-2018 <a href="https://www.ncbi.nlm.nih.gov/pubmed/29161464">[Pubmed]</a>
+    <p id = "TPJ">Increased efficiency of targeted mutagenesis by CRISPR/Cas9 in plants using heat stress. LeBlanc C, Zhang F, Mendez J, Lozano Y, <em><strong>Chatpar K</strong></em>, Irish VF, Jacob Y.  <em><strong>The Plant Journal</strong></em>-2018 <a href="https://www.ncbi.nlm.nih.gov/pubmed/29161464"  target="_blank" >[Pubmed]</a>
       <p>  </p>
       <script type="text/javascript" src="https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js"></script><div class="altmetric-embed" data-badge-type="donut" data-altmetric-id="39946968"></div>
       <p>  </p>
-    <p id = "ER">Reduction of Endoplasmic Reticulum Stress Improves Angiogenic Progenitor Cell function in a Mouse Model of Type 1 Diabetes. Bhatta M, <em><strong>Chatpar K</strong></em>, Hu Z, Wang JJ, Zhang SX. <em><strong>Cell Death and Disease</strong></em>-2018 <a href="https://www.ncbi.nlm.nih.gov/pubmed/29700294">[Pubmed]</a></p>
+    <p id = "ER">Reduction of Endoplasmic Reticulum Stress Improves Angiogenic Progenitor Cell function in a Mouse Model of Type 1 Diabetes. Bhatta M, <em><strong>Chatpar K</strong></em>, Hu Z, Wang JJ, Zhang SX. <em><strong>Cell Death and Disease</strong></em>-2018 <a href="https://www.ncbi.nlm.nih.gov/pubmed/29700294"  target="_blank" >[Pubmed]</a></p>
     <h1 class = "intro">Posters</h1>
-    <p id = "Poster">An artificial three dimensional human retinal capillary model for in vitro study of retinal vascular diseases. <em><strong>Chatpar K</strong></em>, Bhatta M, Wang JJ, Zhang SX.  <em><strong>Celebration of Student Academic Excellence, University at Buffalo</strong></em>-2016 <a href="https://curca.buffalo.edu/students/pdfs/2016_posters/Chatpar.pdf">[Download from UB]</a></p>
+    <p id = "Poster">An artificial three dimensional human retinal capillary model for in vitro study of retinal vascular diseases. <em><strong>Chatpar K</strong></em>, Bhatta M, Wang JJ, Zhang SX.  <em><strong>Celebration of Student Academic Excellence, University at Buffalo</strong></em>-2016 <a href="https://curca.buffalo.edu/students/pdfs/2016_posters/Chatpar.pdf"  target="_blank" >[Download from UB]</a></p>
     <h1 class = "intro">Awards</h1>
-    <p id = "Award">Won the Best Paper Award from <em><strong>The Plant Journal</strong></em> Silver Prize for the Technical Advance Category for: "Increased efficiency of targeted mutagenesis by CRISPR/Cas9 in plants using heat stress"-2018 <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/tpj.13870">[The Plant Journal]</a></p>
+    <p id = "Award">Won the Best Paper Award from <em><strong>The Plant Journal</strong></em> Silver Prize for the Technical Advance Category for: "Increased efficiency of targeted mutagenesis by CRISPR/Cas9 in plants using heat stress"-2018 <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/tpj.13870"  target="_blank" >[The Plant Journal]</a></p>
     <h1 class = "intro">TV Appearances</h1>
-    <p id = "Award">Featured in Food Paradise Season 5 Episode 7 "Taste of The Town" on <em><strong>Travel Channel</strong></em> from minutes 06:18-12:27 <a href="https://www.amazon.com/gp/video/detail/B01N7U8XDH/ref=atv_yvl_list_pr_1">Amazon Video</a></p>
+    <p id = "Award">Featured in Food Paradise Season 5 Episode 7 "Taste of The Town" on <em><strong>Travel Channel</strong></em> from minutes 06:18-12:27 <a href="https://www.amazon.com/gp/video/detail/B01N7U8XDH/ref=atv_yvl_list_pr_1"  target="_blank" >Amazon Video</a></p>
     <!-- 
   <a href = "http://onlinelibrary.wiley.com/doi/10.1111/tpj.13782/full">
   <img alt="logos" src="plantjournal.jpeg" width="200" height="200" class = "intro" id = "tpg">
